# spec-codex

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/blizzard/: apps.py  client.py  models.py  sync_class_spec.py  sync_class_specs.py  sync_race_classes.py  sync_races.py  sync_races_classes.py  sync_spec_details.py  urls.py  views.py
backend/blizzard/management/commands/: sync_playable_class_specs.py  sync_playable_race_classes.py  sync_playable_races.py  sync_playable_spec_details.py
backend/blizzard/migrations/: 0001_initial.py  0002_alter_playablerace_table_playableraceclass.py  0003_playableraceclass_synced_at.py  0004_playableclass_playableclassspecialization.py  0005_playableclassspecialization_description_and_more.py
backend/blizzard/tests/: test_client.py  test_management_commands.py  test_models.py  test_sync_class_specs.py  test_sync_race_classes.py  test_sync_races.py  test_sync_spec_details.py  test_views.py
backend/config/: settings.py  settings_test.py  urls.py
frontend/: .gitignore  app.json  eslint.config.js  metro.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: +html.tsx  +not-found.tsx  _layout.tsx  index.tsx
frontend/app/classes/: [race_id].tsx
frontend/app/classes/[race_id]/: [class_id].tsx
frontend/app/classes/[race_id]/[class_id]/: [spec_id].tsx
frontend/components/layout/: Header.tsx  RaceList.tsx
frontend/components/ui/: BackButton.tsx  Loading.tsx  Text.tsx  Typography.tsx
frontend/hooks/: useRaces.ts
frontend/lib/: query-client.ts
frontend/services/: api.ts
frontend/src/app/: _layout.tsx  index.tsx
frontend/theme/: colors.ts  fontSizes.ts  navigation.ts
frontend/types/: api.ts  mockup.tsx
