[project]
name = "backend-spec-codex"
version = "0.1.0"
description = "API Django com cache de raças, classes por raça e especializações do WoW (Blizzard Game Data)."
authors = [
    {name = "Phillipml",email = "contato.phillip.menezes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
coverage = "^7.14.1"
pytest = "^9.1.0"
pytest-django = "^4.12.0"

[tool.coverage.run]
source = ["blizzard"]
omit = [
    "*/migrations/*",
    "blizzard/tests/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "coverage (>=7.14.1,<8.0.0)",
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)"
]
